update 5 posts tagas

--- a/_posts/2024-11-19-gesp-1-luogu-b2072.md
+++ b/_posts/2024-11-19-gesp-1-luogu-b2072.md
@@ -5,7 +5,7 @@ date: 2024-11-19 22:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一级知识点循环和取余操作练习题，逻辑上需要一点小学生的小思考。
