--- a/_posts/2024-11-20-gesp-1-luogu-b2043.md
+++ b/_posts/2024-11-20-gesp-1-luogu-b2043.md
@@ -5,7 +5,7 @@ date: 2024-11-20 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一级知识点取余和条件判断语句练习题，涉及穷举所有可能。
