--- a/_posts/2024-11-20-gesp-1-luogu-b2044.md
+++ b/_posts/2024-11-20-gesp-1-luogu-b2044.md
@@ -5,7 +5,7 @@ date: 2024-11-20 22:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 一级知识点条件判断练习，提供两种解题思路。
