--- a/_posts/2024-11-22-gesp-3-luogu-b2087.md
+++ b/_posts/2024-11-22-gesp-3-luogu-b2087.md
@@ -5,7 +5,7 @@ date: 2024-11-22 23:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 一维数组]
 categories: [GESP, 三级]
 ---
 GESP三级知识点一维数组练习，题目本身逻辑不复杂。
