update some posts

--- a/_posts/2024-09-19-gesp-1-bcqm3013-3014.md
+++ b/_posts/2024-09-19-gesp-1-bcqm3013-3014.md
@@ -12,7 +12,7 @@ categories: [GESP, 一级]
 
 <!--more-->
 
-## BCQM3013
+## BCQM3013-练4.2 列朋波骨
 
 ### 题目要求
 
@@ -61,7 +61,7 @@ int main() {
 
 ---
 
-## BCQM3014
+## BCQM3014-练4.3 3个连续数
 
 ### 题目要求
 
