--- a/_posts/2025-03-31-gesp-3-luogu-b2113.md
+++ b/_posts/2025-03-31-gesp-3-luogu-b2113.md
@@ -65,8 +65,8 @@ cege
    - 输出结果字符串
 
 4. 时间复杂度分析：
-   - 只需要遍历一次字符串，时间复杂度为O(n)，其中n为字符串长度
-   - 空间复杂度为O(n)，需要存储结果字符串
+   - 只需要遍历一次字符串，时间复杂度为$O(n)$，其中$n$为字符串长度
+   - 空间复杂度为$O(n)$，需要存储结果字符串
 
 {% include custom/custom-post-content-inner.html %}
 
