update 5 posts tags

--- a/_posts/2024-11-23-gesp-1-luogu-b2074.md
+++ b/_posts/2024-11-23-gesp-1-luogu-b2074.md
@@ -5,7 +5,7 @@ date: 2024-11-23 14:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级知识点循环和分支语句练习。又是跟星期有关的计算。题目逻辑不难，但是对数据范围的把握和处理其实有点难度，至少有个小弯子需要处理，不简单。
