--- a/_posts/2024-11-23-gesp-1-luogu-b3650.md
+++ b/_posts/2024-11-23-gesp-1-luogu-b3650.md
@@ -5,7 +5,7 @@ date: 2024-11-23 13:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级知识点循环练习，题目本身逻辑不复杂。但需要注意数据类型以及换行输出超时问题，一次做对也不容易。
