--- a/_posts/2024-11-24-gesp-1-luogu-b2061.md
+++ b/_posts/2024-11-24-gesp-1-luogu-b2061.md
@@ -5,7 +5,7 @@ date: 2024-11-24 00:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级综合练习，涉及循环和分支判断等知识点，难度★☆☆☆☆。
