--- a/_posts/2025-03-31-gesp-3-luogu-b2114.md
+++ b/_posts/2025-03-31-gesp-3-luogu-b2114.md
@@ -85,8 +85,8 @@ TATACCTACCACAAACCGAGAC
    - 输出互补碱基链
 
 4. 时间复杂度分析：
-   - 需要遍历一次字符串，时间复杂度为O(n)，其中n为字符串长度
-   - 空间复杂度为O(n)，需要存储互补链字符串
+   - 需要遍历一次字符串，时间复杂度为$O(n)$，其中n为字符串长度
+   - 空间复杂度为$O(n)$，需要存储互补链字符串
 
 {% include custom/custom-post-content-inner.html %}
 
