--- a/_posts/2024-11-24-gesp-1-luogu-b3931.md
+++ b/_posts/2024-11-24-gesp-1-luogu-b3931.md
@@ -5,7 +5,7 @@ date: 2024-11-24 10:40 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级练习，涉及简单条件分支和逻辑判断，难度★☆☆☆☆。
