--- a/_posts/2024-11-25-gesp-1-luogu-b2036.md
+++ b/_posts/2024-11-25-gesp-1-luogu-b2036.md
@@ -5,7 +5,7 @@ date: 2024-11-25 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级练习，涉及简单条件分支语句和按格式输出，难度★☆☆☆☆。
