--- a/_posts/2024-11-25-gesp-1-luogu-b2048.md
+++ b/_posts/2024-11-25-gesp-1-luogu-b2048.md
@@ -5,7 +5,7 @@ date: 2024-11-25 08:30 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级练习，语分法上涉及分支语句和取余等操作，有一些数学小逻辑，难度★☆☆☆☆。
