--- a/_posts/2024-11-25-gesp-1-luogu-p1421.md
+++ b/_posts/2024-11-25-gesp-1-luogu-p1421.md
@@ -5,7 +5,7 @@ date: 2024-11-25 20:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级练习，基本运算练习，有一些小学数学小逻辑，难度★☆☆☆☆。
