update some posts

--- a/_posts/2025-04-02-gesp-3-luogu-b2116.md
+++ b/_posts/2025-04-02-gesp-3-luogu-b2116.md
@@ -76,11 +76,11 @@ Trvdizrrvj
    - 输出解密后的结果
 
 4. 时间复杂度分析：
-   - 大小写反转需要遍历一次，O(n)
-   - 字符串逆序需要遍历一次，O(n)
-   - 字母表移位需要遍历一次，O(n)
-   - 总体时间复杂度为O(n)，其中n为字符串长度
-   - 空间复杂度为O(1)，仅需要常数额外空间
+   - 大小写反转需要遍历一次，$O(n)$
+   - 字符串逆序需要遍历一次，$O(n)$
+   - 字母表移位需要遍历一次，$O(n)$
+   - 总体时间复杂度为$O(n)$，其中$n$为字符串长度
+   - 空间复杂度为$O(1)$，仅需要常数额外空间
 
 {% include custom/custom-post-content-inner.html %}
 
@@ -89,10 +89,10 @@ Trvdizrrvj
 ### 示例代码
 
 ```cpp
-#include <cctype>
-#include <iostream>
-#include <string>
-#include <algorithm>
+#include <cctype>    // 包含字符处理相关函数，如islower、isupper等
+#include <iostream>  // 包含输入输出流
+#include <string>    // 包含字符串类
+#include <algorithm> // 包含算法库，使用reverse函数
 
 int main() {
     // 声明字符串变量用于存储输入
@@ -101,26 +101,35 @@ int main() {
     std::cin >> input;
     
     // 第一步：大小写反转
+    // 遍历字符串中的每个字符
     for (int i = 0; i < input.length(); i++) {
+        // 如果是小写字母，转换为大写
         if (std::islower(input[i])) {
             input[i] = std::toupper(input[i]);
-        } else if (std::isupper(input[i])) {
+        } 
+        // 如果是大写字母，转换为小写
+        else if (std::isupper(input[i])) {
             input[i] = std::tolower(input[i]);
         }
     }
     
     // 第二步：字符串逆序
+    // 使用algorithm库中的reverse函数将字符串整体反转
     std::reverse(input.begin(), input.end());
     
     // 第三步：字母表循环左移三位解密
+    // 遍历字符串中的每个字符
     for (int i = 0; i < input.length(); i++) {
+        // 处理特殊情况：x、y、z需要循环到a、b、c
         if (input[i] == 'x') {
             input[i] = 'a';
         } else if (input[i] == 'y') {
             input[i] = 'b';
         } else if (input[i] == 'z') {
             input[i] = 'c';
-        } else if (input[i] == 'X') {
+        } 
+        // 处理特殊情况：X、Y、Z需要循环到A、B、C
+        else if (input[i] == 'X') {
             input[i] = 'A';
         } else if (input[i] == 'Y') {
             input[i] = 'B';
@@ -128,6 +137,7 @@ int main() {
             input[i] = 'C';
         } else {
             // 其他字母向后移动3位
+            // ASCII码值加3实现字母表右移三位
             input[i] = input[i] + 3;
         }
     }
