--- a/_posts/2024-11-26-gesp-1-luogu-p1422.md
+++ b/_posts/2024-11-26-gesp-1-luogu-p1422.md
@@ -5,7 +5,7 @@ date: 2024-11-26 20:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级练习，条件分支和浮点数计算、格式化输出问题，难度★☆☆☆☆。
