--- a/_posts/2024-11-27-gesp-1-luogu-p1423.md
+++ b/_posts/2024-11-27-gesp-1-luogu-p1423.md
@@ -5,7 +5,7 @@ date: 2024-11-27 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级练习，循环和计算运算基础练习，难度★✮☆☆☆。
