--- a/_posts/2024-11-28-gesp-1-luogu-p1425.md
+++ b/_posts/2024-11-28-gesp-1-luogu-p1425.md
@@ -5,7 +5,7 @@ date: 2024-11-28 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级综合练习，主要涉及时间计算，难度★☆☆☆☆。
