--- a/_posts/2024-11-28-gesp-3-luogu-p1427.md
+++ b/_posts/2024-11-28-gesp-3-luogu-p1427.md
@@ -6,7 +6,7 @@ author: OneCoder
 comments: true
 math: true
 tags: [GESP, C++]
-categories: [GESP, 三级]
+categories: [GESP, 三级, 一维数组]
 ---
 GESP三级一维数组练习，难度★☆☆☆☆。
 
