update post bcqm3017

--- a/_posts/2024-09-23-gesp-1-bcqm3017-3018.md
+++ b/_posts/2024-09-23-gesp-1-bcqm3017-3018.md
@@ -12,7 +12,7 @@ categories: [GESP, 一级]
 
 <!--more-->
 
-## BCQM3017
+## BCQM3017-【例5.2】输出第二个整数
 
 ### 题目要求
 
@@ -61,7 +61,7 @@ int main() {
 
 {% include custom/custom-post-content-inner.html %}
 
-## BCQM3018
+## BCQM3018-练5.1 复读机
 
 ### 题目要求
 
