--- a/_posts/2025-08-11-gesp-4-luogu-b3940.md
+++ b/_posts/2025-08-11-gesp-4-luogu-b3940.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++四级真题 luogu-B3940 [GESP样题 四级] 填幻方
+title: 【GESP】C++四级练习 luogu-B3940 [GESP样题 四级] 填幻方
 date: 2025-08-11 08:00 +0800
 author: OneCoder
 comments: true
