add 5 posts tags

--- a/_posts/2024-11-29-gesp-1-luogu-b2012.md
+++ b/_posts/2024-11-29-gesp-1-luogu-b2012.md
@@ -5,7 +5,7 @@ date: 2024-11-29 23:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级基础运算练习，难度★☆☆☆☆。
