--- a/_posts/2024-11-28-gesp-3-luogu-p1427.md
+++ b/_posts/2024-11-28-gesp-3-luogu-p1427.md
@@ -5,8 +5,8 @@ date: 2024-11-28 21:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
-categories: [GESP, 三级, 一维数组]
+tags: [GESP, C++, 一维数组]
+categories: [GESP, 三级]
 ---
 GESP三级一维数组练习，难度★☆☆☆☆。
 
