--- a/_posts/2024-11-30-gesp-1-luogu-b2077.md
+++ b/_posts/2024-11-30-gesp-1-luogu-b2077.md
@@ -5,7 +5,7 @@ date: 2024-11-30 16:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级循环和基本运算练习，略有难度，尤其容易忽略数据类型选择的问题，难度★✮☆☆☆。
