--- a/_posts/2024-11-30-gesp-1-luogu-b2078.md
+++ b/_posts/2024-11-30-gesp-1-luogu-b2078.md
@@ -5,7 +5,7 @@ date: 2024-11-30 14:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级循环和基本运算练习，但是相比普通的题来说，略有难度，难度★✮☆☆☆。
