--- a/_posts/2024-12-01-gesp-1-luogu-b4008.md
+++ b/_posts/2024-12-01-gesp-1-luogu-b4008.md
@@ -5,7 +5,7 @@ date: 2024-12-01 10:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级基本运算练习，题目很长，但是很简单，难度★☆☆☆☆。
