--- a/_posts/2024-12-12-gesp-2-luogu-t259142.md
+++ b/_posts/2024-12-12-gesp-2-luogu-t259142.md
@@ -12,7 +12,7 @@ GESP二级练习，涉及多层条件和循环嵌套，难度★✮☆☆☆。
 
 <!--more-->
 
-## luogu-t259142
+## luogu-t259142-数数字
 
 ### 题目要求
 
@@ -54,7 +54,9 @@ GESP二级练习，涉及多层条件和循环嵌套，难度★✮☆☆☆。
 
 在分解过程中，如果当前整数的最后一位数字等于 $x$，我们就将计数器 $ans$ 自增 $1$。最后，我们输出计数器 $ans$ 的值，即数字 $x$ 在区间 $1$ 到 $n$ 的所有整数中出现的次数。
 
-需要注意的是，这道题的时间复杂度为 $O(n)$，空间复杂度为 $O(1)$。因此，这道题的解法是非常高效的，可以处理大规模的输入数据。
+这道题的时间复杂度为 $O(n)$，空间复杂度为 $O(1)$。
+
+---
 
 {% include custom/custom-post-content-inner.html %}
 
