update 5 posts tags

--- a/_posts/2024-12-02-gesp-3-luogu-p1307.md
+++ b/_posts/2024-12-02-gesp-3-luogu-p1307.md
@@ -5,7 +5,7 @@ date: 2024-12-02 12:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 一维数组]
 categories: [GESP, 三级]
 ---
 GESP三级一维数组练习，个人认为是练习到目前相对比较难的一道尤其对小孩子来说，值得练习，难度★✮☆☆☆。
