--- a/_posts/2024-12-04-gesp-2-bcqm-3150.md
+++ b/_posts/2024-12-04-gesp-2-bcqm-3150.md
@@ -5,7 +5,7 @@ date: 2024-12-04 21:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, ASCII]
 categories: [GESP, 二级]
 ---
 GESP二级ASCII基础练习，难度★☆☆☆☆。
