--- a/_posts/2024-12-04-gesp-1-luogu-p1534.md
+++ b/_posts/2024-12-04-gesp-1-luogu-p1534.md
@@ -5,7 +5,7 @@ date: 2024-12-04 13:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级综合练习，需要一点程序解题的小思考，推荐练习，难度★✮☆☆☆。
