--- a/_posts/2024-12-05-gesp-1-bcqm-3153.md
+++ b/_posts/2024-12-05-gesp-1-bcqm-3153.md
@@ -5,7 +5,7 @@ date: 2024-12-05 21:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级综合基础练习，适合编程启蒙，难度★☆☆☆☆。
