update some posts

--- a/_posts/2024-09-24-gesp-1-bcqm3020.md
+++ b/_posts/2024-09-24-gesp-1-bcqm3020.md
@@ -46,9 +46,11 @@ categories: [GESP, 一级]
 
 为了巩固孩子输出、输入函数的掌握，本题我临时让他进行了两种输入、输出模式的实现。
 
-#### 代码参考
+---
 
-##### **scanf/printf**
+### 示例代码
+
+#### **scanf/printf**
 
 ```cpp
 #include <cstdio>
@@ -60,7 +62,7 @@ int main() {
 }
 ```
 
-##### **cin/cout**
+#### **cin/cout**
 
 ```cpp
 #include <iostream>
