--- a/_posts/2025-04-03-gesp-3-luogu-b2117.md
+++ b/_posts/2025-04-03-gesp-3-luogu-b2117.md
@@ -77,9 +77,9 @@ Cefradine-6
    - 输出处理后的结果
 
 4. 时间复杂度分析：
-   - 需要遍历每个药品名的每个字符，O(n*m)
-   - 其中n为药品数量，m为药品名的最大长度
-   - 空间复杂度为O(n*m)，需要存储n个长度为m的字符串
+   - 需要遍历每个药品名的每个字符，$O(n \times m)$
+   - 其中$n$为药品数量，$m$为药品名的最大长度
+   - 空间复杂度为$O(n \times m)$，需要存储$n$个长度为$m$的字符串
 
 {% include custom/custom-post-content-inner.html %}
 
