update 5 posts  tags

--- a/_posts/2024-12-09-gesp-1-bcqm-3173.md
+++ b/_posts/2024-12-09-gesp-1-bcqm-3173.md
@@ -5,7 +5,7 @@ date: 2024-12-09 13:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP一级综合基础练习，涉及循环和基本运算，适合初学者起步练习，难度★☆☆☆☆。
