--- a/_posts/2024-12-16-gesp-2-luogu-b2081.md
+++ b/_posts/2024-12-16-gesp-2-luogu-b2081.md
@@ -5,7 +5,7 @@ date: 2024-12-16 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多重循环]
 categories: [GESP, 二级]
 ---
 GESP二级练习，涉及多层条件和循环嵌套，难度★✮☆☆☆。
