--- a/_posts/2024-12-21-gesp-1-luogu-b4063.md
+++ b/_posts/2024-12-21-gesp-1-luogu-b4063.md
@@ -5,7 +5,7 @@ date: 2024-12-21 13:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句, 真题解析]
 categories: [GESP, 一级]
 ---
 GESP一级2024年12月真题，难度★☆☆☆☆。
