update some posts

--- a/_posts/2024-09-25-gesp-1-bcqm3021.md
+++ b/_posts/2024-09-25-gesp-1-bcqm3021.md
@@ -12,7 +12,7 @@ categories: [GESP, 一级]
 
 <!--more-->
 
-## BCQM3021
+## BCQM3021 输入-计算-输出-2
 
 ### 题目要求
 
@@ -49,9 +49,13 @@ categories: [GESP, 一级]
 ```cpp
 #include <iostream>
 using namespace std;
+
 int main() {
+    // 定义四个整型变量，用于存储四道题的分数
     int a, b, c, d;
+    // 从标准输入读取四个分数
     cin >> a >> b >> c >> d;
+    // 计算并输出总分
     cout << a + b + c + d;
     return 0;
 }
