--- a/_posts/2025-08-13-gesp-4-luogu-b3927.md
+++ b/_posts/2025-08-13-gesp-4-luogu-b3927.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++四级练习 luogu-B3927 [GESP202312 四级] 小杨的字典
+title: 【GESP】C++四级真题 luogu-B3927 [GESP202312 四级] 小杨的字典
 date: 2025-08-13 08:00 +0800
 author: OneCoder
 comments: true
@@ -10,7 +10,7 @@ categories: [GESP, 四级]
 ---
 GESP C++四级2023年12月真题。本题为一维数组和键值对的应用练习，难度⭐⭐★☆☆。本题在洛谷评定为`普及-`。
 
->键值对在使用效果上和哈希表很相似，但是哈希表在GESP中是七级考纲的内容，在C++对应的数据结构是`unordered_map`，因此特意没有使用。但是键值对在C++对应的数据结构是`map`，而GESP考纲中好像没有明确说明属于哪个级别，但是从三级真题来开个别题目的解法其实已经可以涉及该部分内容，因此个人认为`键值对`应该是`GESP三级-四级`应该掌握的内容，故本题给出两种解法，且在后续题目求解中会将键值对作为可选技能之一。
+>键值对在使用效果上和哈希表很相似，但是哈希表在GESP中是七级考纲的内容，在C++对应的数据结构是`unordered_map`，因此特意没有使用。但是键值对在C++对应的数据结构是`map`，而GESP考纲中好像没有明确说明属于哪个级别，但是从三级真题来看个别题目的解法其实已经可以涉及该部分内容，因此个人认为`键值对`应该是`GESP三级-四级`应该掌握的内容，故本题给出两种解法，且在后续题目求解中会将键值对作为可选技能之一。
 {: .prompt-info}
 
 <!--more-->
@@ -26,8 +26,8 @@ GESP C++四级2023年12月真题。本题为一维数组和键值对的应用练
 >为了顺利完成工作，小杨制作了一本字典，里面记录了 $N$ 个 A 语言单词对应的 B 语言单词，巧合的是，这些单词都由地球上的 26 个小写英文字母组成。
 >
 >小杨希望你写一个程序，帮助他根据这本字典翻译一段 A 语言文章。这段文章由标点符号 `!()-.[].{}\|;:'",./?<>` 和一些 A 语言单词构成，每个单词之间必定由至少一个标点符号分割，你的程序需要把这段话中的所有 A 语言单词替换成它的 B 语言翻译。特别地，如果遇到不在字典中的单词，请使用大写 UNK 来替换它。
-
-例如，小杨的字典中包含 $2$ 个 A 语言单词 `abc` 和 `d`，它们的 B 语言翻译分别为 `a` 和 `def`，那么我们可以把 A 语言文章 `abc.d.d.abc.abcd.` 翻译成 B 语言文章 `a.def.def.a.UNK.` 其中，单词 `abcd` 不在词典内，因此我们需要使用 UNK 来替换它。
+>
+>例如，小杨的字典中包含 $2$ 个 A 语言单词 `abc` 和 `d`，它们的 B 语言翻译分别为 `a` 和 `def`，那么我们可以把 A 语言文章 `abc.d.d.abc.abcd.` 翻译成 B 语言文章 `a.def.def.a.UNK.` 其中，单词 `abcd` 不在词典内，因此我们需要使用 UNK 来替换它。
 
 #### 输入格式
 
