--- a/_posts/2024-12-30-gesp-2-luogu-b2086.md
+++ b/_posts/2024-12-30-gesp-2-luogu-b2086.md
@@ -5,7 +5,7 @@ date: 2024-12-30 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多重循环]
 categories: [GESP, 二级]
 ---
 GESP二级练习，多层循环练习，难度★✮☆☆☆。
