--- a/_posts/2024-12-31-gesp-2-luogu-b3638.md
+++ b/_posts/2024-12-31-gesp-2-luogu-b3638.md
@@ -5,7 +5,7 @@ date: 2024-12-31 20:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 数学函数]
 categories: [GESP, 二级]
 ---
 GESP二级练习，数学函数练习，难度★✮☆☆☆。
