--- a/_posts/2025-01-03-gesp-2-luogu-b2079.md
+++ b/_posts/2025-01-03-gesp-2-luogu-b2079.md
@@ -5,7 +5,7 @@ date: 2025-01-03 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多重循环]
 categories: [GESP, 二级]
 ---
 GESP二级练习，循环语句嵌套，难度★✮☆☆☆。
