--- a/_posts/2025-01-04-gesp-2-luogu-b2080.md
+++ b/_posts/2025-01-04-gesp-2-luogu-b2080.md
@@ -5,7 +5,7 @@ date: 2025-01-04 19:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 数学函数]
 categories: [GESP, 二级]
 ---
 GESP二级练习，基本数学函数练习，难度★✮☆☆☆。
