--- a/_posts/2025-04-04-gesp-3-luogu-b2118.md
+++ b/_posts/2025-04-04-gesp-3-luogu-b2118.md
@@ -72,25 +72,27 @@ No substring
 
 #### 解题思路
 
-1. 题目要求规范化药品名称的大小写格式。
+1. 题目要求判断一个字符串是否为另一个字符串的子串。
 
-2. 规范化规则分析：
-   - 第一个字母需要大写
-   - 其余字母需要小写
-   - 数字和特殊字符（如"-"）保持不变
+2. 解题思路分析：
+   - 需要判断两个字符串之间的包含关系
+   - 使用字符串的查找功能来检测子串
+   - 分三种情况：
+     - str1 是 str2 的子串
+     - str2 是 str1 的子串
+     - 两者都不是对方的子串
 
-3. 具体思路：
-   - 读入药品数量n和n个药品名
-   - 对每个药品名进行处理：
-     - 检查第一个字符，如果是字母则转换为大写
-     - 将剩余字符中的字母转换为小写
-     - 数字和特殊字符保持原样
-   - 输出处理后的结果
+3. 具体实现：
+   - 读入两个字符串 str1 和 str2
+   - 使用 `string.find()` 函数检查子串关系：
+     - 如果 `str2.find(str1)` 找到匹配，说明 str1 是 str2 的子串
+     - 如果 `str1.find(str2)` 找到匹配，说明 str2 是 str1 的子串
+     - 如果都没找到，说明不存在子串关系
+   - 按照题目要求的格式输出结果
 
-4. 时间复杂度分析：
-   - 需要遍历每个药品名的每个字符，O(n*m)
-   - 其中n为药品数量，m为药品名的最大长度
-   - 空间复杂度为O(n*m)，需要存储n个长度为m的字符串
+4. 复杂度分析：
+   - 时间复杂度：$O(n \times m)$，其中 $n$ 和 $m$ 分别是两个字符串的长度
+   - 空间复杂度：$O(1)$，只需要存储两个字符串
 
 {% include custom/custom-post-content-inner.html %}
 
