--- a/_posts/2025-01-06-gesp-2-luogu-b3845.md
+++ b/_posts/2025-01-06-gesp-2-luogu-b3845.md
@@ -5,7 +5,7 @@ date: 2025-01-06 12:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多重循环, 数学函数]
 categories: [GESP, 二级]
 ---
 GESP二级练习，多层循环嵌套和数学函数练习，难度★✮☆☆☆。
