--- a/_posts/2025-01-07-gesp-2-luogu-b3844.md
+++ b/_posts/2025-01-07-gesp-2-luogu-b3844.md
@@ -5,7 +5,7 @@ date: 2025-01-07 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多重循环, ASCII]
 categories: [GESP, 二级]
 ---
 GESP二级练习，多层循环嵌套和ASCII练习，难度★✮☆☆☆。
