--- a/_posts/2025-01-09-gesp-2-luogu-b3764.md
+++ b/_posts/2025-01-09-gesp-2-luogu-b3764.md
@@ -5,7 +5,7 @@ date: 2025-01-09 12:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多重循环]
 categories: [GESP, 二级]
 ---
 GESP二级练习，多层循环和分支嵌套练习，难度★✮☆☆☆。
