--- a/_posts/2025-01-13-gesp-2-luogu-b3677.md
+++ b/_posts/2025-01-13-gesp-2-luogu-b3677.md
@@ -5,7 +5,7 @@ date: 2025-01-13 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 分支嵌套]
 categories: [GESP, 二级]
 ---
 GESP二级练习，多层分支嵌套练习，难度★✮☆☆☆。
