--- a/_posts/2025-01-15-gesp-2-luogu-b2092.md
+++ b/_posts/2025-01-15-gesp-2-luogu-b2092.md
@@ -5,7 +5,7 @@ date: 2025-01-15 22:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多重循环]
 categories: [GESP, 二级]
 ---
 GESP二级练习，多层循环分支嵌套练习，难度★✮☆☆☆。
