update posts bcqm3023

--- a/_posts/2024-09-27-gesp-1-bcqm3023.md
+++ b/_posts/2024-09-27-gesp-1-bcqm3023.md
@@ -12,7 +12,7 @@ categories: [GESP, 一级]
 
 <!--more-->
 
-## BCQM3023
+## BCQM3023 输入-计算-输出-4
 
 ### 题目要求
 
@@ -22,7 +22,7 @@ categories: [GESP, 一级]
 
 #### 输入
 
->输入仅有一行，三个整数 a，b，c(0≤a,b,c≤1000)。
+>输入仅有一行，三个整数 $a$，$b$，$c$（$0 \leq a,b,c \leq 1000$）。
 
 #### 输出
 
@@ -50,8 +50,12 @@ categories: [GESP, 一级]
 #include <iostream>
 using namespace std;
 int main() {
+    // 定义三个整型变量，分别存储大、中、小盒子的数量
     int a, b, c;
+    // 从标准输入读取三个整数
     cin >> a >> b >> c;
+    // 计算总盒子数:
+    // 大盒子数量 + (大盒子数量 × 中盒子数量) + (大盒子数量 × 中盒子数量 × 小盒子数量)
     cout << a + a * b + a * b * c;
     return 0;
 }
