--- a/_posts/2025-01-17-gesp-2-luogu-b2063.md
+++ b/_posts/2025-01-17-gesp-2-luogu-b2063.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: 【GESP】C++二级练习 luogu-B2063, 人口增长问题
+title: 【GESP】C++二级练习 luogu-B2063 人口增长问题
 date: 2025-01-17 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 数学函数]
 categories: [GESP, 二级]
 ---
 GESP二级练习，数学函数应用，难度★✮☆☆☆。
