--- a/_posts/2025-01-18-gesp-2-luogu-b2053.md
+++ b/_posts/2025-01-18-gesp-2-luogu-b2053.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【GESP】C++二级练习 luogu-B2053, 求一元二次方程
+title: 【GESP】C++二级练习 luogu-B2053 求一元二次方程
 date: 2025-01-18 11:00 +0800
 author: OneCoder
 comments: true
