--- a/_posts/2025-01-22-gesp-2-luogu-b3658.md
+++ b/_posts/2025-01-22-gesp-2-luogu-b3658.md
@@ -5,7 +5,7 @@ date: 2025-01-22 12:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多重循环, 数学函数]
 categories: [GESP, 二级]
 ---
 GESP二级练习，多重分支嵌套/数学函数，难度★✮☆☆☆。
