--- a/_posts/2025-04-05-gesp-3-luogu-b2119.md
+++ b/_posts/2025-04-05-gesp-3-luogu-b2119.md
@@ -57,7 +57,7 @@ refer
 
 3. 具体思路：
    - 读入一个字符串word
-   - 使用string的substr函数检查后缀：
+   - 使用`string`的`substr`函数检查后缀：
      - 检查是否以"er"结尾
      - 检查是否以"ly"结尾
      - 检查是否以"ing"结尾
@@ -65,9 +65,9 @@ refer
    - 根据后缀情况截取并输出结果
 
 4. 时间复杂度分析：
-   - string的substr函数时间复杂度为O(k)，k为截取长度
-   - 总体时间复杂度为O(1)，因为只需要检查固定长度的后缀
-   - 空间复杂度为O(n)，其中n为输入字符串的长度
+   - `string`的`substr`函数时间复杂度为$O(k)$，$k$为截取长度
+   - 总体时间复杂度为$O(1)$，因为只需要检查固定长度的后缀
+   - 空间复杂度为$O(n)$，其中n为输入字符串的长度
 
 {% include custom/custom-post-content-inner.html %}
 
