--- a/_posts/2024-09-28-gesp-1-bcqm3024.md
+++ b/_posts/2024-09-28-gesp-1-bcqm3024.md
@@ -12,7 +12,7 @@ categories: [GESP, 一级]
 
 <!--more-->
 
-## BCQM3024
+## BCQM3024 输入-计算-输出-5
 
 ### 题目要求
 
@@ -42,16 +42,28 @@ categories: [GESP, 一级]
 
 ### 题目分析
 
-题型[***BCQM3023***](https://www.coderli.com/gesp-1-bcqm3023/)，变量2个，然后计算乘积输出，只不过在本题里埋了一个小小的坑，就是题目要求的输出格式，要先写上“***总的棵树:***”再加上结果。。
+题型[***BCQM3023***](https://www.coderli.com/gesp-1-bcqm3023/)，变量2个，然后计算乘积输出，只不过在本题里埋了一个小小的坑，就是题目要求的输出格式，要先写上“***总的棵树:***”再加上结果。
 
 #### 代码参考
 
 ```cpp
 #include <cstdio>
+
+// 主函数入口
 int main() {
+    // 定义两个整型变量
+    // a - 班级人数
+    // b - 每人种树数量
     int a, b;
+    
+    // 从标准输入读取两个整数
     scanf("%d%d", &a, &b);
+    
+    // 计算并输出总的种树数量
+    // a * b 计算班级总的种树数量
     printf("总的棵数：%d", a * b);
+    
+    // 程序正常结束
     return 0;
 }
 ```
