--- a/_posts/2025-04-06-gesp-3-luogu-b2089.md
+++ b/_posts/2025-04-06-gesp-3-luogu-b2089.md
@@ -70,13 +70,22 @@ GESP三级练习，一维数组练习（C++三级大纲中5号知识点，一维
 ```cpp
 #include <iostream>
 using namespace std;
+
+// 定义一个数组用于存储输入的整数，大小为105以确保足够存储100个元素
 int a[105];
+
 int main() {
+    // 定义变量n用于存储数组长度
     int n;
+    // 输入数组长度
     cin >> n;
+
+    // 循环输入n个整数到数组中
     for (int i = 1; i <= n; i++) {
         cin >> a[i];
     }
+
+    // 从数组末尾开始向前遍历，实现逆序输出
     for (int i = n; i >= 1; i--) {
         cout << a[i] << " ";
     }
