--- a/_posts/2025-04-07-gesp-3-luogu-b2093.md
+++ b/_posts/2025-04-07-gesp-3-luogu-b2093.md
@@ -5,7 +5,7 @@ date: 2025-04-07 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 一维数组]
 categories: [GESP, 三级]
 ---
 GESP三级练习，一维数组练习（C++三级大纲中5号知识点，一维数组），难度★☆☆☆☆。
@@ -54,17 +54,18 @@ GESP三级练习，一维数组练习（C++三级大纲中5号知识点，一维
 
 #### 解题思路
 
-1. 首先需要输入数组长度n和n个整数
-2. 将这些整数存入数组中
-3. 从数组最后一个元素开始向前遍历，依次输出每个元素
-4. 注意输出时每个数字之间需要用空格分隔
+1. 首先需要输入数组长度 $n$，然后输入 $n$ 个整数存入数组中
+2. 再输入需要查找的特定值 $x$
+3. 从数组第一个元素开始向后遍历，查找是否存在值为 $x$ 的元素
+4. 如果找到值为 $x$ 的元素，则输出其下标位置并结束程序
+5. 如果遍历完整个数组都没有找到值为 $x$ 的元素，则输出 $-1$
 
 **复杂度分析：**
 
-- 输入输出操作的时间复杂度为 $O(n)$
-- 遍历数组的时间复杂度为 $O(n)$
+- 输入n个数的时间复杂度为 $O(n)$
+- 遍历数组查找特定值的时间复杂度为 $O(n)$
 - 因此总时间复杂度为 $O(n)$
-- 空间复杂度为 $O(n)$，需要存储n个整数
+- 空间复杂度为 $O(n)$，需要存储n个整数的数组
   
 {% include custom/custom-post-content-inner.html %}
 
