update two posts

--- a/_posts/2024-10-25-gesp-1-luogu-b3835.md
+++ b/_posts/2024-10-25-gesp-1-luogu-b3835.md
@@ -11,7 +11,7 @@ GESP一级真题练习。为2023年3月一级认证真题。
 
 <!--more-->
 
-## luogu-B3835
+## luogu-B3835 每月天数
 
 ### 题目要求
 
@@ -21,7 +21,7 @@ GESP一级真题练习。为2023年3月一级认证真题。
 
 #### 输入
 
->输入一行，包含两个整数 A,B，分别表示一个日期的年、月。约定 2000≤A≤3000，1≤B≤12。
+>输入一行，包含两个整数 $A,B$，分别表示一个日期的年、月。约定 $2000 \leq A \leq 3000$，$1 \leq B \leq 12$。
 
 #### 输出
 
@@ -72,22 +72,38 @@ GESP一级真题练习。为2023年3月一级认证真题。
 - 闰年的判断条件
 - 月份天数的判断逻辑
 
+---
+
+### 示例代码
+
 ```cpp
 #include <iostream>
 using namespace std;
+
 int main() {
+    // 定义年份和月份变量
     int year, month;
+    
+    // 从标准输入读取年份和月份
     cin >> year >> month;
+
+    // 判断月份天数
+    // 31天的月份：1,3,5,7,8,10,12月
     if (month == 1 || month == 3 || month == 5 || month == 7 || month == 8 ||
         month == 10 || month == 12) {
         cout << 31;
-    } else if (month == 4 || month == 6 || month == 9 || month == 11) {
+    }
+    // 30天的月份：4,6,9,11月
+    else if (month == 4 || month == 6 || month == 9 || month == 11) {
         cout << 30;
-    } else if (month == 2) {
+    }
+    // 2月特殊处理：需要判断是否闰年
+    else if (month == 2) {
+        // 闰年判断：能被4整除但不能被100整除，或者能被400整除
         if ((year % 4 == 0 && year % 100 != 0) || year % 400 == 0) {
-            cout << 29;
+            cout << 29;  // 闰年2月29天
         } else {
-            cout << 28;
+            cout << 28;  // 平年2月28天
         }
     }
     return 0;
