--- a/_posts/2025-01-23-gesp-2-luogu-b3686.md
+++ b/_posts/2025-01-23-gesp-2-luogu-b3686.md
@@ -5,7 +5,7 @@ date: 2025-01-23 12:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 数学函数]
 categories: [GESP, 二级]
 ---
 GESP二级练习，数学函数，难度★✮☆☆☆。
