--- a/_posts/2025-01-27-gesp-3-luogu-p1420.md
+++ b/_posts/2025-01-27-gesp-3-luogu-p1420.md
@@ -5,7 +5,7 @@ date: 2025-01-27 12:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 一维数组]
 categories: [GESP, 三级]
 ---
 GESP三级练习，一维数组、循环分支嵌套，难度★✮☆☆☆。
