--- a/_posts/2025-02-01-gesp-2-luogu-b3841.md
+++ b/_posts/2025-02-01-gesp-2-luogu-b3841.md
@@ -5,7 +5,7 @@ date: 2025-02-01 19:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多重循环]
 categories: [GESP, 二级]
 ---
 GESP二级真题，多重循环应用，难度★✮☆☆☆。
