--- a/_posts/2025-02-05-gesp-2-luogu-b2038.md
+++ b/_posts/2025-02-05-gesp-2-luogu-b2038.md
@@ -5,7 +5,7 @@ date: 2025-02-05 09:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, ASCII]
 categories: [GESP, 二级]
 ---
 GESP二级练习，ASCII码练习，难度★☆☆☆☆。
