--- a/_posts/2025-02-05-gesp-2-luogu-b3866.md
+++ b/_posts/2025-02-05-gesp-2-luogu-b3866.md
@@ -5,7 +5,7 @@ date: 2025-02-05 12:30 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多重循环]
 categories: [GESP, 二级]
 ---
 GESP二级真题，多层循环、分支语句、数学函数练习，难度★✮☆☆☆。
