--- a/_posts/2025-02-07-gesp-2-luogu-p1150.md
+++ b/_posts/2025-02-07-gesp-2-luogu-p1150.md
@@ -5,7 +5,7 @@ date: 2025-02-07 08:30 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 二级]
 ---
 GESP二级模拟题，难度★✮☆☆☆。本题考察简单循环和数学逻辑思维。
