--- a/_posts/2025-02-09-gesp-3-luogu-p1567.md
+++ b/_posts/2025-02-09-gesp-3-luogu-p1567.md
@@ -5,7 +5,7 @@ date: 2025-02-09 21:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 一维数组, 多重循环]
 categories: [GESP, 三级]
 ---
 GESP三级，一维数组，多层循环和分支练习，难度★✮☆☆☆。
