--- a/_posts/2024-09-29-gesp-1-bcqm3025.md
+++ b/_posts/2024-09-29-gesp-1-bcqm3025.md
@@ -13,7 +13,7 @@ categories: [GESP, 一级]
 
 <!--more-->
 
-## BCQM3025
+## BCQM3025 输入-计算-输出-6
 
 ### 题目要求
 
@@ -23,7 +23,7 @@ categories: [GESP, 一级]
 
 #### 输入
 
->在一行输入正整数n(0 < n ≤ 10000)、 a、 b、 c (a,b,c ≤ n且 c < min(a,b))。
+>在一行输入正整数 $n$ $(0 < n \leq 10000)$、$a$、$b$、$c$ $(a,b,c \leq n$ 且 $c < \min(a,b))$。
 
 #### 输出
 
@@ -47,38 +47,42 @@ categories: [GESP, 一级]
 
 #### 1. 分析已知条件
 
-- 学校四年级二班有 \( n \) 个人。
-- 参加语文兴趣小组的有 \( a \) 个人。
-- 参加数学兴趣小组的有 \( b \) 个人。
-- 两个小组都参加的有 \( c \) 个人。
+- 学校四年级二班有 $n$ 个人。
+- 参加语文兴趣小组的有 $a$ 个人。
+- 参加数学兴趣小组的有 $b$ 个人。
+- 两个小组都参加的有 $c$ 个人。
 
 我们可以用集合来表示这些学生的分布：
 
-- 设参加语文兴趣小组的学生集合为 \( A \)，那么 \( \|A\| = a \)。
-- 设参加数学兴趣小组的学生集合为 \( B \)，那么 \( \|B\| = b \)。
-- 两个小组都参加的学生数量为 \( c \)，即 \( A $\cap$ B = c \)。
+- 设参加语文兴趣小组的学生集合为 $A$，那么 $|A| = a$。
+- 设参加数学兴趣小组的学生集合为 $B$，那么 $|B| = b$。
+- 两个小组都参加的学生数量为 $c$，即 $|A \cap B| = c$。
 
 #### 2. 使用集合的公式
 
 根据集合的加法原则，我们可以得到参加至少一个兴趣小组的学生数：
-\[
-\|A $\cup$ B\| = \|A\| + \|B\| - \|A $\cap$ B\| = a + b - c
-\]
-其中，\( \|A $\cup$ B\| \) 表示参加至少一个兴趣小组的学生数量。
+$$
+|A \cup B| = |A| + |B| - |A \cap B| = a + b - c
+$$
+其中，$|A \cup B|$ 表示参加至少一个兴趣小组的学生数量。
 
 #### 3. 计算未参加任何小组的学生数
 
-所有学生的总人数是 \( n \)，因此没有参加任何兴趣小组的学生数就是：
-n - \|A $\cup$ B\| = n - (a + b - c)
+所有学生的总人数是 $n$，因此没有参加任何兴趣小组的学生数就是：
+$$n - |A \cup B| = n - (a + b - c)$$
 
-#### 代码参考
+---
+
+### 示例代码
 
 ```cpp
 #include <iostream>
 using namespace std;
 int main() {
     int n, a, b, c;
+    // 输入班级总人数n，参加语文兴趣小组的人数a，参加数学兴趣小组的人数b，两个小组都参加的人数c
     cin >> n >> a >> b >> c;
+    // 计算两个兴趣小组都没有参加的人数：总人数 - (参加语文的人数 + 参加数学的人数 - 两个都参加的人数)
     cout << n - (a + b - c);
     return 0;
 }
@@ -91,7 +95,11 @@ int main() {
 using namespace std;
 int main() {
     int n, a, b, c;
+    // 输入班级总人数n，参加语文兴趣小组的人数a，参加数学兴趣小组的人数b，两个小组都参加的人数c
     cin >> n >> a >> b >> c;
+    // 计算两个兴趣小组都没有参加的人数
+    // 只上语文的人数：(a-c)，只上数学的人数：(b-c)，两个都上的人数：c
+    // 因此都不上的人数 = 总人数 - (只上语文的 + 只上数学的 + 两个都上的)
     cout << n - ((a - c) + (b - c) + c);
     return 0;
 }
