--- a/_posts/2025-08-31-gesp-4-luogu-p1597-3.md
+++ b/_posts/2025-08-31-gesp-4-luogu-p1597-3.md
@@ -13,8 +13,8 @@ categories: [GESP, 四级]
 
 已完成的工作：
 
->[【GESP】C++三级练习 luogu-P1597 语句解析-系列题目1](https://www.coderli.com/gesp-3-luogu-p1597-1/))
->[【GESP】C++三级、四级练习 luogu-P1597 语句解析-系列题目2](https://www.coderli.com/gesp-3-luogu-p1597-2/)
+>- [【GESP】C++三级练习 luogu-P1597 语句解析-系列题目1](https://www.coderli.com/gesp-3-luogu-p1597-1/)
+>- [【GESP】C++三级、四级练习 luogu-P1597 语句解析-系列题目2](https://www.coderli.com/gesp-3-luogu-p1597-2/)
 {: .prompt-tip}
 
 截至目前，我们在完成P1597题目本身要求的基础上，又拓展支持了以下情况：
@@ -73,7 +73,7 @@ a:=3;b:=4;c:=5;
 
 ### 问题定位
 
-针对本次问题让，现有代码的主要局限在于：
+针对本次问题定位，现有代码的主要局限在于：
 
 ```cpp
 // 初始化三个变量的值为0
@@ -102,11 +102,39 @@ std::string v_arys[30];
 std::string v_values[30];
 ```
 
-因为我们需要存储变量名，而变量名是字符串，因此选择字符串类型的数组。同时，为了简化统一处理，我们也将变量值存储为字符串。
+基于数组存储变量名和值的算法设计主要包含以下几个关键点：
+
+1. **数组设计**
+
+- 使用两个平行数组分别存储变量名和对应的值
+- `v_arys[]`数组存储变量名(字符串类型)
+- `v_values[]`数组存储变量值(字符串类型)
+- 两个数组的下标一一对应,形成键值对关系
+
+2. **变量查找**
+
+- 遍历数组查找变量名是否存在
+- 如果找到则返回对应的值
+- 如果未找到则返回默认值"0"
+
+3. **变量赋值**
+
+- 先查找变量是否已存在
+- 如果存在则更新值
+- 如果不存在则在数组末尾添加新变量
+
+4. **变量值获取**
+
+- 支持直接数字值
+- 支持变量引用(需要递归查找变量值)
+
+这样的设计既保持了原有功能,又增加了灵活性。下面我们来看具体的各部门的核心代码
+
+---
 
 ### 变量查找和赋值操作
 
-同时，我们不能再使用简单的if-else来判断变量名了，需要在数组中查找变量。这是一个常见操作，我们可以将其抽象为一个函数：
+我们不能再使用简单的if-else来判断变量名了，需要在数组中查找变量。这是一个常见操作，我们可以将其抽象为一个函数：
 
 ```cpp
 /**
@@ -152,7 +180,7 @@ void set_v_value(std::string v_name, std::string v_val, int& idx) {
 }
 ```
 
-注意这里我们使用了引用参数`int& idx`，这样可以直接修改调用者的变量，避免返回值的传递，提高效率。
+注意这里我们使用了引用参数`int& idx`，这样可以直接修改调用者的变量，便于处理主函数的逻辑。
 
 ### 改进变量值的获取逻辑
 
@@ -183,7 +211,7 @@ std::string get_value(std::string str, int& start) {
 这里我们做了两个改进：
 
 1. 返回类型从`int`改为`std::string`，以支持字符串形式的变量值
-2. 使用引用参数`int& start`，直接修改调用者的索引位置，避免重复计算
+2. 使用引用参数`int& start`，直接修改调用者的索引位置，避免主函数种重复计算。
 
 ### 抽象变量名的获取逻辑
 
@@ -208,7 +236,7 @@ std::string get_v_name(std::string str, int& start) {
 
 ### 添加输出函数
 
-最后，我们需要一个函数来打印变量值：
+最后，我们需要一个函数来打印变量值，这个逻辑设计是为了让我们的输出可以通过P1597原题检查
 
 ```cpp
 /**
