--- a/_posts/2025-09-01-gesp-4-luogu-p1597-4.md
+++ b/_posts/2025-09-01-gesp-4-luogu-p1597-4.md
@@ -9,7 +9,7 @@ tags: [GESP, C++, 字符串, 函数, 键值对]
 categories: [GESP, 四级]
 ---
 
-## 前文回顾
+## 一、前文回顾
 
 已完成的工作：
 
@@ -34,49 +34,49 @@ categories: [GESP, 四级]
 <!--more-->
 ---
 
-## 原题回顾(luogu-P1597 语句解析)
+## 二、原题回顾(luogu-P1597 语句解析)
 
-### 题目要求
+### 2.1 题目要求
 
-#### 题目描述
+#### 2.1.1 题目描述
 
 >一串长度不超过 $255$ 的 PASCAL 语言代码，只有 $a,b,c$ 三个变量，而且只有赋值语句，赋值只能是一个一位的数字或一个变量，每条赋值语句的格式是 `[变量]:=[变量或一位整数];`。未赋值的变量值为 $0$ 输出 $a,b,c$ 的值。
 
-#### 输入格式
+#### 2.1.2 输入格式
 
 >一串符合语法的 PASCAL 语言，只有 $a,b,c$ 三个变量，而且只有赋值语句，赋值只能是一个一位的数字或一个变量，未赋值的变量值为 $0$。
 
-#### 输出格式
+#### 2.1.3 输出格式
 
 >输出 $a,b,c$ 最终的值。
 
-### 输入输出样例 #1
+### 2.2 输入输出样例 #1
 
-#### 输入 #1
+#### 2.2.1 输入 #1
 
 ```plaintext
 a:=3;b:=4;c:=5;
 ```
 
-#### 输出 #1
+#### 2.2.2 输出 #1
 
 ```plaintext
 3 4 5
 ```
 
-#### 说明/提示
+### 2.3 说明/提示
 
 输入的 PASCAL 语言长度不超过 $255$。
 
 ---
 
-## 本次题目分析
+## 三、本次题目分析
 
 首先简要介绍下本次题目重点要使用和掌握的的map和unordered_map数据结构。
 
-### `map`和`unordered_map`数据结构功能简介
+### 3.1 map和unordered_map数据结构简介
 
-#### 1. `std::map`
+#### 3.1.1 *std::map*
 
 ***功能:***
 
@@ -100,7 +100,7 @@ a:=3;b:=4;c:=5;
 
 ---
 
-#### 2. `std::unordered_map`
+#### 3.1.2 *std::unordered_map*
 
 ***功能:***
 
@@ -121,7 +121,7 @@ a:=3;b:=4;c:=5;
 
 ---
 
-#### 3. 对比总结表
+#### 3.1.3 对比总结表
 
 | 特性       | `map`（有序映射）  | `unordered_map`（无序映射） |
 | -------- | ------------ | --------------------- |
@@ -136,9 +136,9 @@ a:=3;b:=4;c:=5;
 
 ---
 
-### `map`和`unordered_map`使用方式简介
+### 3.2 *map*和*unordered_map*使用方式简介
 
-#### 1. `std::map` 使用示例
+#### 3.2.1 *std::map* 使用示例
 
 ```cpp
 #include <iostream>
@@ -185,7 +185,7 @@ map（有序）：
 
 ---
 
-#### 2. `std::unordered_map` 使用示例
+#### 3.2.2 *std::unordered_map* 使用示例
 
 ```cpp
 #include <iostream>
@@ -245,18 +245,18 @@ unordered_map（无序）：
 
 ---
 
-### 本题思路改造思路介绍
+### 3.3 本题思路改造思路介绍
 
 将承载的数据结构从数组改成`map/unordered_map`后，代码的主要调整逻辑如下：
 
-#### 1. 数据结构定义的变化
+#### 3.3.1 数据结构定义的变化
 
 ```cpp
 // 定义全局变量map，用于存储变量名和对应的值
 std::map<std::string, std::string> v_map;
 ```
 
-#### 2. 变量查找函数的简化
+#### 3.3.2 变量查找函数的简化
 
 ```cpp
 std::string find_v_value(std::string v_name) {
@@ -267,7 +267,7 @@ std::string find_v_value(std::string v_name) {
 }
 ```
 
-#### 3. 变量赋值函数的简化
+#### 3.3.3 变量赋值函数的简化
 
 ```cpp
 void set_v_value(std::string v_name, std::string v_val) {
@@ -275,7 +275,7 @@ void set_v_value(std::string v_name, std::string v_val) {
 }
 ```
 
-#### 4. 变量输出函数的变化
+#### 3.3.4 变量输出函数的变化
 
 ```cpp
 void print_v_values(std::string v_name = "") {
@@ -291,7 +291,7 @@ void print_v_values(std::string v_name = "") {
 }
 ```
 
-#### 5. 主函数中索引管理的简化
+#### 3.3.5 主函数中索引管理的简化
 
 ```cpp
 int main() {
@@ -310,7 +310,7 @@ int main() {
 }
 ```
 
-#### 6. 主要改进点总结
+### 3.4 本题主要改进点总结
 
 1. **数据结构简化**：从两个平行数组改为单一的键值对容器，更符合问题本质
 2. **查找效率提升**：
@@ -334,9 +334,9 @@ int main() {
 
 ---
 
-### 示例代码
+### 3.5 示例代码
 
-#### `map`示例代码
+#### 3.5.1 *map* 示例代码
 
 ```cpp
 #include <cctype>
@@ -448,7 +448,7 @@ int main() {
 }
 ```
 
-#### `unordered_map`示例代码
+#### 3.5.2 *unordered_map* 示例代码
 
 ```cpp
 #include <cctype>
@@ -569,7 +569,7 @@ int main() {
 
 ---
 
-## 系列总结
+## 四、系列总结
 
 至此，我们已经原题从只支持`a`、`b`、`c`三个变量且值只支持1位数字，拓展成了：
 
