--- a/_posts/2025-09-01-gesp-4-luogu-p1597-4.md
+++ b/_posts/2025-09-01-gesp-4-luogu-p1597-4.md
@@ -136,7 +136,7 @@ a:=3;b:=4;c:=5;
 
 ---
 
-### 3.2 *map*和*unordered_map*使用方式简介
+### 3.2 map和unordered_map使用方式简介
 
 #### 3.2.1 *std::map* 使用示例
 
@@ -241,7 +241,7 @@ unordered_map（无序）：
 >   - 如果 `key` 存在 → 返回指向该元素的迭代器。
 >   - 如果 `key` 不存在 → 返回 `end()`，不会插入新元素。
 >   - 查找时 **安全**，不会改变容器。
-{: .prompt-info}
+{: .prompt-warning}
 
 ---
 
