update 6 posts tags

--- a/_posts/2025-03-15-gesp-2-luogu-b3721.md
+++ b/_posts/2025-03-15-gesp-2-luogu-b3721.md
@@ -5,7 +5,7 @@ date: 2025-03-15 14:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多重循环]
 categories: [GESP, 二级]
 ---
 GESP二级练习，多层循环分支练习，难度★✮☆☆☆。
@@ -57,12 +57,12 @@ GESP二级练习，多层循环分支练习，难度★✮☆☆☆。
 
 下表中，用 $s$ 和 $t$ 分别代表 Farmer John 和 Bessie 在对应轮次**开始前**手中的石头数，每行代表一次操作。
 
-| 操作者 | $s$ | $t$ | 操作 | 
+| 操作者 | $s$ | $t$ | 操作 |
 | :-: | :-: | :-: | :-: |
 | Farmer John | $2$ | $5$ | $s = s + 1$ |
 | Bessie | $3$ | $5$ | $t = \left\lfloor\frac{t}{2}\right\rfloor$ |
 | Farmer John | $3$ | $2$ | $s = \left\lfloor\frac{s}{2}\right\rfloor$ |
-| Bessie | $1$ | $2$ | $t = \left\lfloor\frac{t}{2}\right\rfloor$ | 
+| Bessie | $1$ | $2$ | $t = \left\lfloor\frac{t}{2}\right\rfloor$ |
 | Farmer John | $1$ | $1$ | $s = \left\lfloor\frac{s}{2}\right\rfloor$ |
 | 结束 | $0$ | $1$ | |
 
