--- a/_posts/2025-03-10-gesp-2-luogu-p5719.md
+++ b/_posts/2025-03-10-gesp-2-luogu-p5719.md
@@ -5,7 +5,7 @@ date: 2025-03-10 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 二级]
 ---
 GESP二级练习，循环分支练习，难度★☆☆☆☆。
