--- a/_posts/2025-03-13-gesp-2-luogu-b3720.md
+++ b/_posts/2025-03-13-gesp-2-luogu-b3720.md
@@ -5,7 +5,7 @@ date: 2025-03-13 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多重循环]
 categories: [GESP, 二级]
 ---
 GESP二级练习，多层分支练习，难度★✮☆☆☆。
