update post gesp-2-b2080

--- a/_posts/2025-01-04-gesp-2-luogu-b2080.md
+++ b/_posts/2025-01-04-gesp-2-luogu-b2080.md
@@ -48,11 +48,15 @@ $x$ 在 double 范围内，$n \le 1000000$。
 
 ### 题目分析
 
-1. 读取输入的整数 $n$，表示计算 $e$ 时累加到 $1/n!$。
-2. 使用循环从 $1$ 到 $n$，计算每个项的值并累加到 $e$ 的值中。具体来说，循环中计算每个项的值时，需要计算 $i!$，然后将 $1$ 除以 $i!$，得到当前项的值。将这个值累加到 $e$ 的值中，得到最终的 $e$ 值。
-3. 输出计算得到的 $e$ 的值，保留小数点后 $10$ 位。
+1. 题目要求计算形如 $x^n+x^{n-1}+...+x^2+x+1$ 的多项式的值。输入包含两个数：浮点数 $x$ 和整数 $n$。
+2. 解题思路有两种:
+   - 方法一：直接循环累加。从 $i=0$ 到 $n$ 循环，每次计算 $x^i$ 并累加到结果中。
+   - 方法二：使用等比数列求和公式。该多项式实际上是首项为 1，公比为 x，项数为 n+1 的等比数列的和。可以直接使用公式 $S_{n+1}=\frac{1-x^{n+1}}{1-x}$ 计算。
+3. 最后按要求输出结果，保留两位小数。需要注意当 $x=1$ 时要特殊处理，此时结果直接为 $n+1$。
 
 {% include custom/custom-post-content-inner.html %}
+
+---
 
 ### 示例代码
 
