--- a/_posts/2025-04-14-gesp-3-luogu-b2121.md
+++ b/_posts/2025-04-14-gesp-3-luogu-b2121.md
@@ -18,7 +18,7 @@ GESP三级练习，字符串练习（C++三级大纲中6号知识点，字符串
 
 #### 题目描述
 
->输入 $1$ 行句子（不多于 $200$ 个单词，每个单词长度不超过 $100)$，只包含字母、空格、逗号和句号。单词由至少一个连续的字母构成，空格、逗号和句号都是单词间的间隔。
+>输入 $1$ 行句子(不多于 $200$ 个单词，每个单词长度不超过 $100$)，只包含字母、空格、逗号和句号。单词由至少一个连续的字母构成，空格、逗号和句号都是单词间的间隔。
 >
 >输出第 $1$ 个最长的单词和第 $1$ 个最短单词。
 
