update 6 posts tags

--- a/_posts/2025-03-16-gesp-2-luogu-b3736.md
+++ b/_posts/2025-03-16-gesp-2-luogu-b3736.md
@@ -5,7 +5,7 @@ date: 2025-03-16 09:30 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 二级]
 ---
 GESP二级练习，循环分支练习，难度★☆☆☆☆。
