update 5posts tags

--- a/_posts/2024-09-29-gesp-1-bcqm3026.md
+++ b/_posts/2024-09-29-gesp-1-bcqm3026.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 math: true
-title: 【GESP】C++一级练习BCQM3026，输入-计算-输出-7
+title: 【GESP】C++一级练习BCQM3026 输入-计算-输出-7
 date: 2024-09-29 18:30 +0800
 author: OneCoder
 image: /images/post/gesp/gesp-1-v2.png
@@ -13,7 +13,7 @@ categories: [GESP, 一级]
 
 <!--more-->
 
-## BCQM3026
+## BCQM3026 输入-计算-输出-7
 
 ### 题目要求
 
@@ -45,15 +45,24 @@ categories: [GESP, 一级]
 
 如果做过之前的问题，难度就完全没有了。读入变量，计算，输出即可。连计算都变成最简单的加法了。
 
-#### 代码参考
+---
+
+#### 示例代码
 
 ```cpp
 #include <iostream>
 using namespace std;
+
 int main() {
+    // 定义三个整数变量用于存储输入的数值
     int a, b, c;
+    
+    // 从标准输入读取三个整数
     cin >> a >> b >> c;
+    
+    // 计算三个数的和并输出
     cout << a + b + c;
+    
     return 0;
 }
 ```
