--- a/_posts/2025-03-25-gesp-2-luogu-b4259.md
+++ b/_posts/2025-03-25-gesp-2-luogu-b4259.md
@@ -5,7 +5,7 @@ date: 2025-03-25 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多层循环]
 categories: [GESP, 二级]
 ---
 GESP二级真题，多层循环练习，难度★✮☆☆☆。
