--- a/_posts/2025-03-25-gesp-2-luogu-b4260.md
+++ b/_posts/2025-03-25-gesp-2-luogu-b4260.md
@@ -5,7 +5,7 @@ date: 2025-03-25 11:30 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 二级]
 ---
 GESP二级真题，分支语句练习，难度★✮☆☆☆。
