--- a/_posts/2025-03-29-gesp-3-luogu-b2110.md
+++ b/_posts/2025-03-29-gesp-3-luogu-b2110.md
@@ -5,7 +5,7 @@ date: 2025-03-29 11:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 字符串, 一维数组]
 categories: [GESP, 三级]
 ---
 GESP三级练习，字符串和数组练习（C++三级大纲中5号知识点，一维数组和6号知识点，字符串），难度★★☆☆☆。
