--- a/_posts/2025-03-31-gesp-3-luogu-b2113.md
+++ b/_posts/2025-03-31-gesp-3-luogu-b2113.md
@@ -5,7 +5,7 @@ date: 2025-03-31 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 字符串]
 categories: [GESP, 三级]
 ---
 GESP三级练习，字符串练习（C++三级大纲中6号知识点，字符串），难度★✮☆☆☆。
