update posts tags

--- a/_posts/2025-04-06-gesp-3-luogu-b2089.md
+++ b/_posts/2025-04-06-gesp-3-luogu-b2089.md
@@ -5,7 +5,7 @@ date: 2025-04-06 22:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 一维数组]
 categories: [GESP, 三级]
 ---
 GESP三级练习，一维数组练习（C++三级大纲中5号知识点，一维数组），难度★☆☆☆☆。
