update some tags

--- a/_posts/2025-05-30-gesp-1-luogu-b4258.md
+++ b/_posts/2025-05-30-gesp-1-luogu-b4258.md
@@ -5,7 +5,7 @@ date: 2025-05-30 13:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
 GESP C++一级真题，简单判断和数学运算，难度★☆☆☆☆。
