--- a/_posts/2025-05-29-gesp-3-luogu-b3640.md
+++ b/_posts/2025-05-29-gesp-3-luogu-b3640.md
@@ -5,7 +5,7 @@ date: 2025-05-29 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 字符串]
 categories: [GESP, 三级]
 ---
 GESP三级练习，字符串转换相关，与以往真题难度相当，难度★★☆☆☆。
