--- a/_posts/2025-06-03-gesp-3-luogu-b3654.md
+++ b/_posts/2025-06-03-gesp-3-luogu-b3654.md
@@ -5,7 +5,7 @@ date: 2025-06-03 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 字符串, 一维数组]
 categories: [GESP, 三级]
 ---
 GESP C++三级练习，字符串和一维数组相关，难度★★☆☆☆。
