--- a/_posts/2025-06-04-gesp-3-luogu-b3769.md
+++ b/_posts/2025-06-04-gesp-3-luogu-b3769.md
@@ -5,7 +5,7 @@ date: 2025-06-04 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 字符串]
 categories: [GESP, 三级]
 ---
 GESP C++三级练习，字符串截取练习，难度★★☆☆☆。
