--- a/_posts/2025-09-08-gesp-4-luogu-b4040.md
+++ b/_posts/2025-09-08-gesp-4-luogu-b4040.md
@@ -5,10 +5,10 @@ date: 2025-09-08 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++, 排序, 前缀和, 滑动窗口]
+tags: [GESP, C++, 多维数组]
 categories: [GESP, 四级]
 ---
-GESP C++四级2024年6月真题。本题主要考察排序、前缀和和滑动窗口思想。暴力难度不大，滑动窗口需要点思想，整体难度⭐⭐★☆☆。本题在洛谷评定为`普及-`。
+GESP C++四级2024年9月真题。本题主要考察二维数组的应用。暴力难度不大，整体难度⭐⭐★☆☆。本题在洛谷评定为`普及-`。
 
 <!--more-->
 
