update posts tags

--- a/_posts/2025-06-15-gesp-4-luogu-p5729.md
+++ b/_posts/2025-06-15-gesp-4-luogu-p5729.md
@@ -5,7 +5,7 @@ date: 2025-06-15 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 多维数组]
 categories: [GESP, 四级]
 ---
 GESP C++四级练习，二维/多维数组练习，难度★★☆☆☆。
