--- a/_posts/2025-06-08-gesp-3-luogu-b2097.md
+++ b/_posts/2025-06-08-gesp-3-luogu-b2097.md
@@ -5,7 +5,7 @@ date: 2025-06-08 18:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 一维数组]
 categories: [GESP, 三级]
 ---
 GESP C++三级练习，一维数组练习，难度★★☆☆☆。
