--- a/_posts/2025-06-18-gesp-3-luogu-p1554.md
+++ b/_posts/2025-06-18-gesp-3-luogu-p1554.md
@@ -5,7 +5,7 @@ date: 2025-06-18 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++]
+tags: [GESP, C++, 一维数组, 字符串]
 categories: [GESP, 三级]
 ---
 GESP C++三级练习，一维数组/字符串练习，难度★★☆☆☆。
