--- a/_posts/2025-09-10-gesp-4-luogu-b4068.md
+++ b/_posts/2025-09-10-gesp-4-luogu-b4068.md
@@ -85,37 +85,44 @@ $a_1,a_2,a_3,a_4,a_5$ 从小到大排序的结果为 $1,2,3,6,7$。
 
 本题的解题思路如下：
 
-1. 题目要求生成 Recamán 数列并对前 n 项进行排序。Recamán 数列的生成规则是：
-   - 第一项 $a_1 = 1$
-   - 对于第 k 项，如果 $a_{k-1}-k$ 是正整数且未在数列中出现过，则 $a_k = a_{k-1}-k$
-   - 否则 $a_k = a_{k-1}+k$
+#### 1. 题目要求
 
-2. 解题关键点：
-   - 需要判断一个数是否已经在数列中出现过
-   - 数列生成过程中需要记录已有的数字
-   - 最后需要对生成的数列进行排序
-   - 数据范围 $n \leq 3000$，可以使用数组存储
+生成 Recamán 数列并对前 n 项进行排序。Recamán 数列的生成规则是：
 
-3. 具体实现步骤：
-   - 读入数列长度 n
-   - 初始化第一项为 1
-   - 循环生成后续数字：
-     - 计算 $a_{k-1}-k$
-     - 判断是否为正数且未出现过
-     - 根据判断结果确定第 $k$ 项的值
-   - 对整个数列排序并输出
+- 第一项 $a_1 = 1$
+- 对于第 k 项，如果 $a_{k-1}-k$ 是正整数且未在数列中出现过，则 $a_k = a_{k-1}-k$
+- 否则 $a_k = a_{k-1}+k$
 
-4. 时间复杂度分析：
-   - 生成数列时每次需要遍历已有数字判断是否存在，复杂度 $O(n^2)$
-   - 最后排序的复杂度为 $O(n\log n)$
-   - 总体时间复杂度为 $O(n^2)$
-   - 由于 $n \leq 3000$，此复杂度可以接受
+#### 2. 解题关键点
 
-5. 注意事项：
-   - 数组下标从 1 开始更方便处理
-   - 判断数字是否存在时需要遍历到当前位置
-   - 输出数字间需要用空格分隔
-   - 最后一个数字后也需要输出空格
+- 需要判断一个数是否已经在数列中出现过
+- 数列生成过程中需要记录已有的数字
+- 最后需要对生成的数列进行排序
+- 数据范围 $n \leq 3000$，可以使用数组存储
+
+#### 3. 具体实现步骤
+
+- 读入数列长度 n
+- 初始化第一项为 1
+- 循环生成后续数字：
+  - 计算 $a_{k-1}-k$
+  - 判断是否为正数且未出现过
+  - 根据判断结果确定第 $k$ 项的值
+- 对整个数列排序并输出
+
+#### 4. 时间复杂度分析
+
+- 生成数列时每次需要遍历已有数字判断是否存在，复杂度 $O(n^2)$
+- 最后排序的复杂度为 $O(n\log n)$
+- 总体时间复杂度为 $O(n^2)$
+- 由于 $n \leq 3000$，此复杂度可以接受
+
+#### 5. 注意事项
+
+- 数组下标从 1 开始更方便处理
+- 判断数字是否存在时需要遍历到当前位置
+- 输出数字间需要用空格分隔
+- 最后一个数字后也需要输出空格
 
 这道题目主要考察对数组和排序的应用，排序使用 C++ 的 `sort` 函数可以方便地实现最后的排序操作。
 
