--- a/_posts/2025-09-16-gesp-4-luogu-b4361.md
+++ b/_posts/2025-09-16-gesp-4-luogu-b4361.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++, 多维数组]
 categories: [GESP, 四级]
 ---
-GESP C++四级2025年6月真题。本题主要考查二维数组的应用。属于四级题中的简单题。难度⭐⭐☆☆☆。本题在洛谷评定为`入门`。
+GESP C++四级2025年6月真题。本题主要考查二维数组的应用。属于四级题中的正常题目。难度⭐⭐★☆☆。本题在洛谷评定为`普及-`。
 
 <!--more-->
 
