--- a/_posts/2025-09-16-gesp-4-luogu-b4361.md
+++ b/_posts/2025-09-16-gesp-4-luogu-b4361.md
@@ -5,10 +5,10 @@ date: 2025-09-16 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++, 多维数组]
+tags: [GESP, C++, 排序]
 categories: [GESP, 四级]
 ---
-GESP C++四级2025年6月真题。本题主要考查二维数组的应用。属于四级题中的正常题目。难度⭐⭐★☆☆。本题在洛谷评定为`普及-`。
+GESP C++四级2025年6月真题。本题主要考查排序的应用。属于四级题中的正常题目。难度⭐⭐★☆☆。本题在洛谷评定为`普及-`。
 
 <!--more-->
 
