--- a/_posts/2025-09-28-gesp-2-luogu-b4412.md
+++ b/_posts/2025-09-28-gesp-2-luogu-b4412.md
@@ -98,18 +98,22 @@ GESP二级真题，多层循环练习，难度★✮☆☆☆。
    - **上半部分（第 $1$ 行到第 $\text{mid}-1$ 行）**：每行有两个 `#`，分别在:
   
     $$
+    \begin{cases}
     \text{左斜线列号} = \text{mid} - i + 1 \\
     \text{右斜线列号} = \text{mid} + i - 1
+    \end{cases}
     $$
 
    - **中间行（第 $\text{mid}$ 行）**：只有首列和末列为 `#`。
    - **下半部分（第 $\text{mid}+1$ 行到第 $n$ 行）**：与上半部分对称，`#` 分别在:
     $$
-     \text{左斜线列号} = i - \text{mid} + 1 \\
-     \text{右斜线列号} = n - i + \text{mid}
+    \begin{cases}
+    \text{左斜线列号} = i - \text{mid} + 1 \\
+    \text{右斜线列号} = n - i + \text{mid}
+    \end{cases}
     $$
 
-1. **遍历输出**  
+3. **遍历输出**  
    双重循环枚举每个位置，判断是否为 `#`，否则输出 `.`。
 
 #### 复杂度分析
