--- a/_posts/2025-09-28-gesp-2-luogu-b4412.md
+++ b/_posts/2025-09-28-gesp-2-luogu-b4412.md
@@ -5,7 +5,7 @@ date: 2025-09-28 18:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++, 多层循环]
+tags: [GESP, C++, 多重循环]
 categories: [GESP, 二级]
 ---
 GESP二级真题，多层循环练习，难度★✮☆☆☆。
@@ -106,6 +106,7 @@ GESP二级真题，多层循环练习，难度★✮☆☆☆。
 
    - **中间行（第 $\text{mid}$ 行）**：只有首列和末列为 `#`。
    - **下半部分（第 $\text{mid}+1$ 行到第 $n$ 行）**：与上半部分对称，`#` 分别在:
+
     $$
     \begin{cases}
     \text{左斜线列号} = i - \text{mid} + 1 \\
