--- a/_posts/2025-09-28-gesp-1-luogu-b4409.md
+++ b/_posts/2025-09-28-gesp-1-luogu-b4409.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
-GESP一级真题，基础语句练习，难度★☆☆☆☆。
+GESP C++ 2025年9月一级真题，基础语句练习，难度★☆☆☆☆。
 
 <!--more-->
 
