--- a/_posts/2025-09-28-gesp-2-luogu-b4411.md
+++ b/_posts/2025-09-28-gesp-2-luogu-b4411.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++, 多重循环]
 categories: [GESP, 二级]
 ---
-GESP二级真题，多层循环练习，难度★✮☆☆☆。
+GESP C++ 2025年9月二级真题，多层循环练习，难度★✮☆☆☆。
 
 <!--more-->
 
