--- a/_posts/2025-09-30-gesp-3-luogu-b4413.md
+++ b/_posts/2025-09-30-gesp-3-luogu-b4413.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: 【GESP】C++二级真题 luogu-B4413 [GESP202509 三级] 数组清零
+title: 【GESP】C++三级真题 luogu-B4413 [GESP202509 三级] 数组清零
 date: 2025-09-30 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++, 多重循环]
+tags: [GESP, C++, 多重循环, 一维数组]
 categories: [GESP, 三级]
 ---
 GESP C++ 2025年9月三级真题，多层循环练习，难度★✮☆☆☆。
