--- a/_posts/2025-09-30-gesp-3-luogu-b4413.md
+++ b/_posts/2025-09-30-gesp-3-luogu-b4413.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++, 多重循环, 一维数组]
 categories: [GESP, 三级]
 ---
-GESP C++ 2025年9月三级真题，多层循环练习，难度★✮☆☆☆。
+GESP C++ 2025年9月三级真题，一维数组考点，难度★★☆☆☆。
 
 <!--more-->
 
