--- a/_posts/2025-10-05-gesp-4-luogu-b4415.md
+++ b/_posts/2025-10-05-gesp-4-luogu-b4415.md
@@ -5,7 +5,7 @@ date: 2025-10-05 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++, 多维数组]
+tags: [GESP, C++, 多维数组, 前缀和]
 categories: [GESP, 四级]
 ---
 GESP C++ 2025年9月四级真题，二维数组考点，难度⭐⭐★☆☆。
