--- a/_posts/2025-10-18-gesp-5-luogu-b3951.md
+++ b/_posts/2025-10-18-gesp-5-luogu-b3951.md
@@ -31,7 +31,7 @@ GESP C++ 五级练习，但是核心的考点是四级排序内容，因为是GE
 >第一行一个整数 $N$，表示同学的数量  
 第二行 $N$ 个用空格隔开的正整数，依次表示学号为 $0,1,$ … $,N-1$ 的同学的身高（不超过 $2,147,483,647$）。  
 第三行一个整数 $M$，表示老师点名的数量。  
-接下来 $M$ 行，依次描述 $M$ 次点名：每行一个整数 $x$（$0 \le x<N$），表示要求学号为 $x$ 的同学加入队伍。保证该名同学此前不在队伍中。
+接下来 $M$ 行，依次描述 $M$ 次点名：每行一个整数 $x$（$0 \le x \le N$），表示要求学号为 $x$ 的同学加入队伍。保证该名同学此前不在队伍中。
 
 #### 输出格式
 
