new post cspxl-2025ln-2-points

--- a/_posts/2025-11-07-csp-xl-2025ln-2-points.md
+++ b/_posts/2025-11-07-csp-xl-2025ln-2-points.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【CSP】CSP-XL 2025辽宁复赛真题-第二题, 积分（points）（二维数组前缀和考点，约相当于GESP四级+，五级-）
+title: 【CSP】CSP-XL 2025辽宁复赛真题-第二题, 积分（points）
 date: 2025-11-07 08:00 +0800
 author: OneCoder
 comments: true
