--- a/_posts/2025-11-20-gesp-5-luogu-p11960.md
+++ b/_posts/2025-11-20-gesp-5-luogu-p11960.md
@@ -12,7 +12,7 @@ GESP C++ 2025年3月五级真题，贪心思想考点，涉及排序，题目难
 
 <!--more-->
 
-## luogu-B4071 [GESP202412 五级] 武器强化
+## luogu-P11960 [GESP202503 五级] 平均分配
 
 ### 题目要求
 
