--- a/_posts/2025-11-23-gesp-5-luogu-p13013.md
+++ b/_posts/2025-11-23-gesp-5-luogu-p13013.md
@@ -5,7 +5,7 @@ date: 2025-11-23 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++, 数论]
+tags: [GESP, C++, 二分答案]
 categories: [GESP, 五级]
 ---
 GESP C++ 2025年6月五级真题，二分答案考点，题目难度⭐⭐⭐☆☆，五级来说难度适中。洛谷难度等级`普及/提高−`
