--- a/_posts/2025-11-28-gesp-5-luogu-p9532.md
+++ b/_posts/2025-11-28-gesp-5-luogu-p9532.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++, 贪心]
 categories: [GESP, 五级]
 ---
-GESP C++ 五级练习题，虽然题目名称叫前缀和，但确是贪心考点，确实有点误导。题目难度⭐⭐★☆☆，五级来说难度适中。洛谷难度等级`普及−`
+GESP C++ 五级练习题，虽然题目名称叫前缀和，但却是贪心考点，确实有点奇怪的误导。题目难度⭐⭐★☆☆，五级来说难度适中。洛谷难度等级`普及−`
 
 <!--more-->
 
