--- a/_posts/2025-12-01-gesp-5-luogu-p1115.md
+++ b/_posts/2025-12-01-gesp-5-luogu-p1115.md
@@ -5,7 +5,7 @@ date: 2025-12-01 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++, 贪心]
+tags: [GESP, C++, 贪心, 前缀和]
 categories: [GESP, 五级]
 ---
 GESP C++ 五级练习题，贪心和前缀和/Kadane算法考点。题目难度⭐⭐★☆☆，五级来说难度偏简单。洛谷难度等级`普及−`
