--- a/_posts/2025-12-02-gesp-5-luogu-p1387.md
+++ b/_posts/2025-12-02-gesp-5-luogu-p1387.md
@@ -5,7 +5,7 @@ date: 2025-12-02 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++, 前缀和]
+tags: [GESP, C++, 前缀和, 动态规划]
 categories: [GESP, 五级]
 ---
 GESP C++ 五级练习题，经典前缀和考点。题目难度⭐⭐★☆☆，适合做前缀和基本练习，洛谷难度等级`普及-`。
