--- a/_posts/2025-12-03-gesp-5-luogu-p1719.md
+++ b/_posts/2025-12-03-gesp-5-luogu-p1719.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++, 前缀和, 动态规划] 
 categories: [GESP, 五级] 
 ---
-GESP C++ 五级/六级练习题，二维前缀和的应用与优化。题目难度⭐⭐⭐☆☆，适合进阶练习二维数组处理和子矩阵求和，洛谷难度等级`普及+/提高`。
+GESP C++ 五级/六级练习题，二维前缀和的应用与优化。题目难度⭐⭐★☆☆，适合进阶练习二维数组处理和子矩阵求和，洛谷难度等级`普及-`。
 
 <!--more-->
 
