new post syllabus-3

--- a/_posts/2025-12-03-gesp-5-luogu-p1719.md
+++ b/_posts/2025-12-03-gesp-5-luogu-p1719.md
@@ -109,6 +109,8 @@ $1 \leq n\le 120$
 - **方法一：** 适合初学者理解二维前缀和，代码逻辑简单直接，对应 GESP 五级知识点。
 - **方法二：** 融合了降维技巧和线性 DP，效率更高，对应 GESP 六级或更高阶的算法思维。
 
+{% include custom/custom-post-content-inner.html %}
+
 ---
 
 ### 示例代码
