--- a/_posts/2025-12-11-gesp-5-luogu-p2242.md
+++ b/_posts/2025-12-11-gesp-5-luogu-p2242.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++, 贪心] 
 categories: [GESP, 五级] 
 ---
-GESP C++ 五级练习题，贪心思想印象。题目难度⭐⭐★☆☆，适合五级入门练习，洛谷难度等级`普及-`。
+GESP C++ 五级练习题，贪心思想考点。题目难度⭐⭐★☆☆，适合五级入门练习，洛谷难度等级`普及-`。
 
 <!--more-->
 
