--- a/_posts/2024-10-26-gesp-1-luogu-b3834.md
+++ b/_posts/2024-10-26-gesp-1-luogu-b3834.md
@@ -4,6 +4,7 @@ title: 【GESP】C++一级真题练习(202303)luogu-B3834，长方形面积
 date: 2024-10-26 13:00 +0800
 author: OneCoder
 comments: true
+math: true
 tags: [GESP, C++, 基础语句]
 categories: [GESP, 一级]
 ---
