--- a/_posts/2024-10-07-gesp-1-bcqm3038.md
+++ b/_posts/2024-10-07-gesp-1-bcqm3038.md
@@ -48,10 +48,10 @@ categories: [GESP, 一级]
 ```cpp
 #include <cstdio>
 int main() {
-    int a, b;
-    scanf("%d%d", &a, &b);
-    printf("%.9f", (double) a / b);
-    return 0;
+    int a, b;                // 定义分子 a 和分母 b
+    scanf("%d%d", &a, &b);   // 读取用户输入的两个整数
+    printf("%.9f", (double) a / b); // 将 a 强制转为 double 后做除法，保留 9 位小数输出
+    return 0;                // 程序正常结束
 }
 ```
 
