--- a/_posts/2024-10-08-gesp-1-bcqm3039.md
+++ b/_posts/2024-10-08-gesp-1-bcqm3039.md
@@ -48,9 +48,12 @@ categories: [GESP, 一级]
 ```cpp
 #include <iostream>
 using namespace std;
+
 int main() {
     int a, b;
+    // 输入被除数 a 和除数 b
     cin >> a >> b;
+    // a / b 计算整数商，a % b 计算余数，中间用空格隔开
     cout << a / b << " " << a % b;
     return 0;
 }
