--- a/_posts/2024-10-08-gesp-1-bcqm3040.md
+++ b/_posts/2024-10-08-gesp-1-bcqm3040.md
@@ -72,14 +72,14 @@ int main() {
 using namespace std;
 int main() {
     int n, k;
-    cin >> n >> k;
-    int max;
+    cin >> n >> k;          // 读取上限N和除数K
+    int max;                // 用于记录当前找到的最大幸运数
     for (int i = 1; i <= n; i++) {
-        if (i % k == 0) {
-            max = i;
+        if (i % k == 0) {   // 若i能被K整除，则i是一个候选幸运数
+            max = i;        // 更新最大幸运数（因为i递增，故每次直接覆盖即可）
         }
     }
-    cout << max;
+    cout << max;            // 输出最终找到的最大幸运数
     return 0;
 }
 ```
@@ -92,10 +92,10 @@ int main() {
 #include <iostream>
 using namespace std;
 int main() {
-    int n, k;
-    cin >> n >> k;
-    cout << n / k * k;
-    return 0;
+    int n, k;           // 定义两个整数变量n和k，分别表示上限N和除数K
+    cin >> n >> k;      // 从标准输入读取n和k的值
+    cout << n / k * k;  // 利用整数除法向下取整的特性，直接计算不超过n且能被k整除的最大数
+    return 0;           // 程序正常结束
 }
 ```
 
